Added age group in request

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -105,6 +105,7 @@
                             <label for="age" class="form-label">Age Group</label>
                             <select class="form-control" id="age">
                                 <option selected value="">Please Select</option>
+                                <option value="00 - 13">00 - 12 (Kid)</option>
                                 <option value="13 - 17">13 - 17 (Youth)</option>
                                 <option value="18 - 29">18 - 29 (Adult)</option>
                                 <option value="30 - 39">30 - 39 (Adult)</option>
@@ -161,7 +162,7 @@
                     <div class="alert alert-danger alert-dismissible fade d-none" role="alert" id="username-alert">
                         Please don't use email or mobile number as user name
                     </div>
-                    <div class="alert alert-danger alert-dismissible fade d-none" role="alert" id="tnc-alert">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert" id="tnc-alert">
                         Please agree to the terms and condition before proceeding
                     </div>
             </div>
