New content added in static pages, home page validations done, total progress bar on record page done

--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -16,15 +16,19 @@
 
     <%- include common/header.ejs %>
     <div class="container-fluid">
-        <div class="row pt-5">
-            <div class="col-6 ml-lg-auto py-5 pl-5 text-dark my-5">
-                <h1 class="display-5 font-wt-900 site-blue">Vakyaansh: A crowdsourcing initiative for Indic languages
+        <div class="row pt-lg-5">
+            <div class="col-12 col-xl-6 ml-xl-auto py-5 pl-5 text-dark mt-4">
+                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyaansh: A crowdsourcing initiative for Indic
+                    languages
                 </h1>
-                <p class="h4 font-weight-light lh-7 site-blue text-justify">We have envisioned a Speech recognition
-                    product that focusses solely on our languages. This vision requires enormous amount of diversified
-                    dataset of Indian voices and hence, we are reaching out to you for your contribution.</p>
+                <p class="h4 font-weight-light lh-7 site-blue text-justify mt-5">
+                    For the development of a speech recognition product that focuses solely on Indian languages,
+                    there is a need for an enormous repository of diversified Indian voices. Through
+                    Vakyaansh, we are reaching out to you to contribute your voices to create a diverse open source
+                    repository of Indian voices to this end.
+                </p>
             </div>
-            <div class="col-lg-5 col-6 pt-5 mt-5 text-right px-0">
+            <div class="col-xl-5 col-12 pt-5 mt-5 text-right px-0">
                 <img src="/img/home.svg" class="img img-fluid">
             </div>
         </div>
@@ -33,83 +37,85 @@
     <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
         <div class="row justify-content-center text-white pt-5 pb-5">
             <aside class="col-8 col-lg-4 text-left pr-4 pl-0 mb-2">
-                <p class="h1 font-wt-900">
+                <p class="h1 font-wt-900 lh-5">
                     Our multilingual DNA is still a missing piece in digital first strategy
                 </p>
             </aside>
             <div class="col-8 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
-                <section class="lead"><b>90% of India’s population </b>relies on regional languages to conduct their
-                    educational, social & digital
-                    activities, resulting in enormous multilingual content. Experts say that, nine out of ten new
-                    internet users will use local languages and by 2021, there will be around <b>500 million users </b> of
-                    Indian languages.</section>
+                <section class="lead">India being a vast multilingual country, 90% of India’s population relies on
+                    regional languages to
+                    conduct their educational, social & digital activities.</section>
+
+
             </div>
-            <div class="col-8 col-lg-3 text-left pl-lg-3 pl-0 mb-2">
-                <section class="lead">This shows that there is a need to start aligning communication and <b> winning back
-                    our languages </b> by
-                    influencing the various digital platforms and consumer products, such as, learning platforms, to
-                    start thinking Indic languages first and move towards language localization in India</section>
+            <div class="col-8 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
+                <section class="lead">As the volume of internet users multiplies and there is a demand to access digital
+                    platforms for financial, educational and economic activities, there is a need to
+                    start thinking Indic languages
+                    first and move towards language localization.</section>
             </div>
         </div>
     </div>
 
     <div class="container-fluid bg-light-blue mt-n5">
         <div class="row pb-6 pt-6 justify-content-center mt-5">
-            <div class="col-8 col-lg-4 mb-3 text-center p-5">
-                <img src="img/about-us-1.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+            <div class="col-8 col-lg-4 text-center p-5 align-self-center">
+                <img src="img/about-us-1.svg" alt="Speaker Diversity" class="img img-fluid">
             </div>
-            <div class="col-8 col-lg-6 mb-3 text-left pb-5 lead">
-                <p class="h1 font-wt-900 lh-7">
-                    Winning back our languages by introducing localisation in our ecosystem
+            <div class="col-8 col-lg-6 text-left pb-5">
+                <p class="h1 font-wt-900 lh-5">
+                    Winning back our languages by introducing localisation
                 </p>
-                <p>The need of the hour, hence, is to introduce India to a highly qualitative Speech recognition product
-                    that specializes in most of our Indic languages, meets the accuracy bar that they deserve and be
-                    closer to the daily functions of an Indian citizen.
+                <p class="lead lh-7 mt-5">There is a felt need for a speech recognition product that specializes in
+                    Indic languages, that
+                    meets a high accuracy bar and is closer to the daily language and
+                    communication functions of users of diverse Indian languages.
 
                     </br>
                     </br>
-                    Speech recognition is a technology that converts
-                    speech to real-time text. This product has a potential to become building block to our digital first
-                    model, in various sectors, such as, education, healthcare and media.
+                    Speech recognition is a technology that converts speech to real-time text. Such a product for
+                    Indian languages has the potential to become a building block to a digital first model, in
+                    various sectors, such as, education, healthcare and media.
 
                     </br>
                     </br>
-                    Ekstep dreams of making this
-                    product open source and freely available for all Indians, to weave it rapidly and effectively into
-                    our social and digital fabric.</p>
-
+                    The product proposed to be developed by EkStep will rely on open source contributions through
+                    Vakyaansh.</p>
             </div>
         </div>
     </div>
 
     <div class="container-fluid bg-blue mt-n5">
-        <div class="row pb-6 pt-6 justify-content-center  text-white mt-5">
-            <div class="col-8 col-lg-6 mb-3 text-left pb-5 lh-7">
-                <p class="h1 font-wt-900 lh-7">
-                    How will your contribution help
+        <div class="row pb-5 pt-6 justify-content-center  text-white mt-5">
+            <div class="col-8 col-lg-6 mb-3 text-left pb-5">
+                <p class="h1 font-wt-900 lh-5">
+                    Crowd Sourcing & your contribution
                 </p>
-                <p class="lead">Speech recognition relies on “machine-learning” technology that requires huge
-                    collections of
-                    datasets that includes diversified Indian voices and the corresponding text. We plan to begin with
-                    Hindi and then gradually grow the product to other Indic languages. Our goal is to reach
-                    approximately 10,000 hrs of dataset for Hindi language alone. This is where you come in.
+                <p class="lead lh-7 mt-5">Speech recognition relies on "machine-learning" technology that requires huge
+                    collections of datasets that includes diversified Indian voices and the corresponding text. Through
+                    Vakyaansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian
+                    language which can be used for this initiative and others. The initial plan is to begin
+                    with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach
+                    approximately 10,000 hrs of dataset for Hindi language at the earliest.
                     </br>
                     </br>
-                    To meet
-                    the high-quality standards that we have set for ourselves, as a team, we are inviting you, to join
-                    us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one
-                    stretch might be overwhelming and hence, we have created leaner measures on our website, for you to
-                    visit us multiple times and commence from where you left us off.
+                    This is where you come in.
                     </br>
                     </br>
-                    Every minute of your contribution
-                    will make a huge difference and bring us closer to our vision. </p>
+                    As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this
+                    initiative. Recording your voice at one stretch might be overwhelming and hence, we have created
+                    leaner measures on our website, for you to visit us multiple times and commence from where you left
+                    us off.
+                    </br>
+                    </br>
+                    Every minute of your contribution will make a huge difference and bring us closer to our objective. 
+                </p>
 
-                <a role="button" href="/record" class="mt-3 h6 btn btn-lg bg-white px-5 py-2 text-primary">START
+                <a role="button" href="/record" class="mt-3 btn btn-lg bg-white px-5 py-2 text-primary">START
                     RECORDING</a>
             </div>
-            <div class="col-8 col-lg-4 mb-3 text-center p-5">
-                <img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid h-100">
+            <div class="col-8 col-lg-4 mb-3 text-center p-5 align-self-center">
+                <img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid">
             </div>
         </div>
     </div>
@@ -119,27 +125,20 @@
             ABOUT THE ORGANISATION
         </div>
         <p class="h1 font-wt-900 text-center mt-3">
-            Ek Step
+            EkStep
         </p>
 
         <div class="row pb-6 justify-content-center text-muted">
-            <div class="col-8 col-lg-4 mb-3 text-left lh-7 p-5 lead">
-                In our country, access to learning opportunities, for our citizens, is limited. The problem becomes more
-                complex, if most of the qualitative educational solutions, do not reach, or are not endorsed by the
-                ecosystem of the learner. EkStep intends to create a learner-centric, technology-based platform to not
-                only, improve basic literacy and numeracy, for millions of children and other citizens, but also,
-                empower their ecosystems digitally, to encourage access to this platform.
+            <div class="col-sm-8 col-10 col-lg-6 mb-3 text-left lh-7 py-5 lead">
+                EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve
+                complex societal problems at scale. We do this by leveraging the open source digital infrastructure we
+                have created called Sunbird and by following a way of thinking and doing called the Societal Platform
+                Approach.
+            </br>
+        </br>
+            EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada. 
 
             </div>
-            <div class="col-8 col-lg-4 mb-3 text-left lh-7 p-5 lead">
-
-                In our country, access to learning opportunities, for our citizens, is limited. The problem becomes more
-                complex, if most of the qualitative educational solutions, do not reach, or are not endorsed by the
-                ecosystem of the learner. EkStep intends to create a learner-centric, technology-based platform to not
-                only, improve basic literacy and numeracy, for millions of children and other citizens, but also,
-                empower their ecosystems digitally, to encourage access to this platform.
-            </div>
-
         </div>
     </div>
 
