--- a/public/css/home.css
+++ b/public/css/home.css
@@ -50,6 +50,9 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
 .lh-7{
 line-height: 1.7;
 }
+.lh-5{
+  line-height: 1.5;
+  }
 .material-icons.md-48 {
   font-size: 2.5rem;
 }
@@ -77,4 +80,13 @@ line-height: 1.7;
 }
 .opc-4{
 opacity: 0.4;
+}
+.point-none { 
+  pointer-events: none;
+}
+.outline-0{
+  outline: 0;
+}
+.form-control.is-invalid{
+  background-image: none;
 }
